apps/pinepods/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: pinepods
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8040
