apps/pinepods/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinepods-ingress
  namespace: default
spec:
  ingressClassName: public
  tls:
    - secretName: orriborri-com-tls
  rules:
    - host: pinepods.orriborri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pinepods
                port:
                  number: 80
